--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dropify": "^0.2.2",
     "dropzone": "^5.8.1",
     "feather-icons": "^4.28.0",
+    "file-saver": "^2.0.5",
     "flatpickr": "^4.6.9",
     "flot-charts": "^0.8.3",
     "flot-orderbars": "^1.0.0",
@@ -87,7 +88,8 @@
     "twitter-bootstrap-wizard": "^1.2.0",
     "waypoints": "^4.0.1",
     "wordcloud": "^1.2.2",
-    "x-editable": "^1.5.1"
+    "x-editable": "^1.5.1",
+    "xlsx": "^0.17.4"
   },
   "devDependencies": {
     "autoprefixer": "^9.4.7",
