--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-minify": "^3.1.0",
     "gulp-rtlcss": "^1.4.1",
     "hopscotch": "^0.3.1",
+    "html2canvas": "^1.3.3",
     "ion-rangeslider": "^2.3.1",
     "jquery": "3.6.0",
     "jquery-countdown": "^2.2.0",
